--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,10 @@ install_requires =
     numpy
     magicgui
     qtpy
+    xarray
+    dask
+    numpy
+    tifffile
 
 python_requires = >=3.8
 include_package_data = True
