--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -6,6 +6,7 @@ name: tests
 on:
   push:
     branches:
+      - main
       - npe2
     tags:
       - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
